--- a/test/style.css
+++ b/test/style.css
@@ -3,11 +3,11 @@ body{
 }
 .header{
 	background-color: rgba(127, 107, 245, 1);
-	height: 200px;
+	height: 100px;
 }
 .block{
 	background-color: rgba(20, 253, 29, 1);
-	height: 720px;
+	height: 82vh;
 	width: 873px;
 	border: 4px solid red;
 }
@@ -17,15 +17,16 @@ ul {
     padding: 0;
     width: 277px;
     border: 1px solid #555;
-     height: 720px; /* Full height */
+     height: 82vh;
      float: right;
      border: 4px solid rgba(12, 252, 237, 1);
 }
+
 li a {
     display: block;
     text-align: center;
     border-bottom: 1px solid #555;
-    height: 131px;
+    height: 21vh;
 }
 li:last-child {
     border-bottom: none;
