--- a/test/style.css
+++ b/test/style.css
@@ -4,6 +4,10 @@ body{
 .header{
 	background-color: rgba(127, 107, 245, 1);
 	height: 15vh;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.6) 0%, rgba(245, 252, 254, 0.6) 16.15%, rgba(245, 252, 254, 0.6) 33.33%, rgba(245, 252, 254, 0.6) 35.94%, rgba(18, 180, 231, 0.6) 100%);
+mix-blend-mode: normal;
+opacity: 0.8;
+border-radius: 10px;
 }
 .block{
 	background-color: rgba(20, 253, 29, 1);
