--- a/test/style.css
+++ b/test/style.css
@@ -1,19 +1,70 @@
+
 body{
 	margin: 0;
+   background: linear-gradient(151.93deg, #E793EF 0%, #B6A2E4 49.05%, #45DDD1 100%);
+
 }
+
 .header{
-	background-color: rgba(127, 107, 245, 1);
 	height: 15vh;
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0.6) 0%, rgba(245, 252, 254, 0.6) 16.15%, rgba(245, 252, 254, 0.6) 33.33%, rgba(245, 252, 254, 0.6) 35.94%, rgba(18, 180, 231, 0.6) 100%);
-mix-blend-mode: normal;
-opacity: 0.8;
-border-radius: 10px;
+
 }
 .block{
-	background-color: rgba(20, 253, 29, 1);
+
+	background: linear-gradient(180deg, rgba(255, 255, 255, 0.52) 0%, rgba(255, 255, 255, 0.1612) 88.33%, rgba(255, 255, 255, 0) 100%);
+backdrop-filter: blur(4px);
+/* Note: backdrop-filter has minimal browser support */
+
+border-radius: 15px;;
 	height: 83vh;
 	width: 873px;
-	border: 4px solid red;
+    float: right;
+}
+.block .head{
+    text-align: center;
+    width: 672px;
+    border-bottom: 3px solid #FFFFFF;
+    margin: 0 100px;
+    height: 12%;
+}
+.block .head p{
+    margin: 0;
+    padding: 10px 0;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 65px;
+    letter-spacing: 0.15em;
+    color: #FFFFFF;
+}
+
+.block .stat{
+    padding: 0;
+    margin: 0;
+    height: 39%;
+    margin-bottom: 20px;
+}
+.block .stat .name{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 54px;
+    padding: 10px 20px;
+
+    color: #FFFFFF;
+}
+.block .stat .text{
+    width: 829px;
+    height: 75%;
+    margin: auto;
+
+background: rgba(0, 0, 0, 0.4);
+backdrop-filter: blur(4px);
+/* Note: backdrop-filter has minimal browser support */
+
+border-radius: 15px;
 }
 ul {
     list-style-type: none;
@@ -22,14 +73,16 @@ ul {
     width: 277px;
     border: 1px solid #555;
      height: 83vh;
-     float: right;
+     float: left;
      border: 4px solid rgba(12, 252, 237, 1);
+     mix-blend-mode: normal;
+     position: fixed; /* Make it stick, even on scroll */
+    overflow: auto; /* Enable scrolling if the sidenav has too much content */
 }
 
 li a {
     display: block;
     text-align: center;
-    border-bottom: 1px solid #555;
     height: 21vh;
 }
 li:last-child {
@@ -37,6 +90,5 @@ li:last-child {
 }
 .content{
 	width: 1170px;
-	border: 5px solid blue;
 	margin: auto;
 }
