--- a/test/style.css
+++ b/test/style.css
@@ -1,94 +1,172 @@
 
+/*Обнуление*/
+*{padding: 0;margin: 0;border: 0;}
+*,*:before,*:after{-webkit-box-sizing: border-box;box-sizing: border-box;}
+:focus,:active{outline: none;}
+a:focus,a:active{outline: none;}
+nav,footer,header,aside{display: block;}
+html,body{width: 100%;font-size: 100%;line-height: 1;font-size: 14px;
+-ms-text-size-adjust: 100%;-moz-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;}
+input,button,textarea{font-family:inherit;} input::-ms-clear{display: none;}
+button{cursor: pointer;} button::-moz-focus-inner {padding:0;border:0;}
+a, a:visited{text-decoration: none;} a:hover{text-decoration: none;}
+ul li{list-style: none;}
+img{vertical-align: top;}
+h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
+/*********************/
 body{
-	margin: 0;
-   background: linear-gradient(151.93deg, #E793EF 0%, #B6A2E4 49.05%, #45DDD1 100%);
-
-}
-
-.header{
-	height: 15vh;
-
-}
-.block{
-
-	background: linear-gradient(180deg, rgba(255, 255, 255, 0.52) 0%, rgba(255, 255, 255, 0.1612) 88.33%, rgba(255, 255, 255, 0) 100%);
-backdrop-filter: blur(4px);
-/* Note: backdrop-filter has minimal browser support */
-
-border-radius: 15px;;
-	height: 83vh;
-	width: 873px;
-    float: right;
-}
-.block .head{
-    text-align: center;
-    width: 672px;
-    border-bottom: 3px solid #FFFFFF;
-    margin: 0 100px;
-    height: 12%;
-}
-.block .head p{
-    margin: 0;
-    padding: 10px 0;
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 48px;
-    line-height: 65px;
-    letter-spacing: 0.15em;
-    color: #FFFFFF;
-}
-
-.block .stat{
-    padding: 0;
-    margin: 0;
-    height: 39%;
-    margin-bottom: 20px;
-}
-.block .stat .name{
-    font-family: 'Open Sans';
+    background: linear-gradient(151.93deg, #E793EF 0%, #B6A2E4 49.05%, #45DDD1 100%);
+    font-family: 'PT Serif';
     font-style: normal;
     font-weight: 400;
     font-size: 40px;
-    line-height: 54px;
-    padding: 10px 20px;
-
-    color: #FFFFFF;
+    line-height: 53px;
+    color: #393939;
 }
-.block .stat .text{
-    width: 829px;
-    height: 75%;
+a{
+    color: #393939;
+}
+.content{
+    width: 1170px;
     margin: auto;
-
-background: rgba(0, 0, 0, 0.4);
-backdrop-filter: blur(4px);
-/* Note: backdrop-filter has minimal browser support */
+}
+.header{
+    height: 15vh;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.07em;
+    text-transform: uppercase;
+    color: #403F41;
+}
+.header img{
+    height: 90%;
+    margin-left: 107px;
+}
+.header h1{
+    margin-left: 15px;
+}
+.header .login{
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
+.login a{
+    font-family: 'Lora';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 26px;
+    background: rgba(217, 217, 217, 0.4);
+    mix-blend-mode: normal;
+    backdrop-filter: blur(4px);
+    padding: 11px;
 
 border-radius: 15px;
 }
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 277px;
-    border: 1px solid #555;
-     height: 83vh;
-     float: left;
-     border: 4px solid rgba(12, 252, 237, 1);
-     mix-blend-mode: normal;
-     position: fixed; /* Make it stick, even on scroll */
-    overflow: auto; /* Enable scrolling if the sidenav has too much content */
+.login a:nth-child(1){
+    margin-right: 20px;
+    margin-left: 70px;
 }
+/* Навигационное меню */
+nav{
+    width: 277px;
+    height: 85vh;
+    float: left;
+    list-style-type: none;
+    mix-blend-mode: normal;
+    position: fixed; 
+    overflow: auto;
+    margin-top: 20px;
+}
+nav .search{
+    background: rgba(255, 255, 255, 0.8) url(Source/img/search.png) left no-repeat;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    height: 5%;
+    margin: 10% 10% 25% 10%;
+    padding: 5px 20px 5px 30px;
 
-li a {
+}
+nav ul li{
+    background: rgba(217, 217, 217, 0.4);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 15px;
+    margin: 9%;
+}
+nav ul li a {
     display: block;
     text-align: center;
-    height: 21vh;
+    height: 11vh;
+    text-align: center;
+}
+li:first-child {
+    margin-top: 0;
 }
 li:last-child {
-    border-bottom: none;
+    margin-bottom: 0;
 }
-.content{
-	width: 1170px;
-	margin: auto;
+/*контент*/
+.block{
+	background: linear-gradient(180deg, rgba(255, 255, 255, 0.52) 0%, rgba(255, 255, 255, 0.1612) 88.33%, rgba(255, 255, 255, 0) 100%);
+    backdrop-filter: blur(4px);
+    border-radius: 15px;;
+	height: 85vh;
+	width: 873px;
+    float: right;
+    margin: 0 0 20px 0;
+}
+.block-header{
+    text-align: center;
+    width: 672px;
+    border-bottom: 3px solid #393939;
+    padding: 3% 0 3% 0;
+    margin: auto;
+    height: 15%;
+}
+.block-header h2{
+    margin-bottom: 3%;
+    font-family: 'Lora';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 51px;
+    text-align: center;
+    letter-spacing: 0.15em;
+}
+
+.block-content{
+    height: 39%;
+    margin-top: 10px;
+}
+.block-content-header{
+    padding: 10px 20px;
+}
+.block-content-description{
+    width: 829px;
+    height: 60%;
+    margin: auto;
+    background: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(4px);
+    border-radius: 15px 15px 0px 0px;
+}
+.block-content-description p {
+    font-size: 20px;
+    line-height: 26px;
+    color: #FFFFFF;
+    padding: 5px;
+}
+.block-content-author{
+    border-radius: 0 0 15px 15px;
+    width: 829px;
+    height: 10%;
+    background: rgba(0, 0, 0, 0.4);
+    margin: auto;
+    backdrop-filter: blur(4px);
+    border-top: 1px solid #525050;
+}
+.block-content-author p{
+    font-size: 24px;
+    line-height: 19px;
+    color: #FFFFFF;
+    padding-left: 9px;
 }
