--- a/test/style.css
+++ b/test/style.css
@@ -19,7 +19,7 @@ body{
     font-family: 'PT Serif';
     font-style: normal;
     font-weight: 400;
-    font-size: 40px;
+    font-size: 33px;
     line-height: 53px;
     color: #393939;
 }
@@ -60,8 +60,7 @@ a{
     mix-blend-mode: normal;
     backdrop-filter: blur(4px);
     padding: 11px;
-
-border-radius: 15px;
+    border-radius: 15px;
 }
 .login a:nth-child(1){
     margin-right: 20px;
@@ -79,24 +78,26 @@ nav{
     margin-top: 20px;
 }
 nav .search{
+    width: 276px;
+    font-size: 20px;
     background: rgba(255, 255, 255, 0.8) url(Source/img/search.png) left no-repeat;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
     height: 5%;
-    margin: 10% 10% 25% 10%;
-    padding: 5px 20px 5px 30px;
+    margin: 10% 0 25% 0;
+    padding: 5px 10px 5px 30px;
 
 }
 nav ul li{
     background: rgba(217, 217, 217, 0.4);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 15px;
-    margin: 9%;
+    margin: 15% auto;
 }
 nav ul li a {
     display: block;
     text-align: center;
-    height: 11vh;
+    height: 9%;
     text-align: center;
 }
 li:first-child {
