--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ a{
     margin-right: 10px;
 }
 .header .login{
+    margin-left: 200px;
     display: flex;
     align-items: center;
     text-align: center;
